--- a/Assets/dashly.css
+++ b/Assets/dashly.css
@@ -27,4 +27,9 @@
     border: none;
     font-family: "Century Gothic", sans-serif;
     margin-right: 20px;
+    padding-top: 5px;
+}
+
+.header {
+    margin-bottom: 15px;
 }
